Set min width on id column to prevent number wrapping.

--- a/StatusCheckBundle/Resources/public/css/main.css
+++ b/StatusCheckBundle/Resources/public/css/main.css
@@ -56,6 +56,7 @@
     width: 100px;
 }
 .col-id{
+    min-width:100px;
     width:120px;
 }
 .col-status {
